# nepremicnine-discord-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.txt  db_setup.py  docker-compose.dev.yml  docker-compose.yml  main.py  migrate.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  main.yml
common/: constants.py  globals.py
database/: database_manager.py  init.sql  models.py
logger/: logger.py
services/: discord_service.py  extract_service.py  search_service.py
spider/: spider.py
util/: util.py
